2009-09-29  Francois Suter  <francois@typo3.org>

	* Fixed bug #12068: Scheduler: Improper skipping of running tasks in case multiple execution denied

2009-09-29  Rupert Germann  <rupi@gmx.li>

	* Added feature #9355: Add an error and exception handler (backported from FLOW3) (thanks to Ingo Renner)
	* Added improvement #11855: security related links in EM are not marked as links.
	* Fixed bug #12032: The message "The selected language is not available..." in EM tranlation handling wrong if no language can be chosen (Thanks to Georg Ringer)

2009-09-29  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11433: touch(): Utime failed in install tool (thanks to Steffen Gebert)
	* Added feature #12076: Integration of saltedpasswords as system extension (thanks to Marcus Krause & Steffen Ritter)

2009-09-28  Benjamin Mack  <benni@typo3.org>

	* Included feeditadvanced as system extension through svn:externals (tag 43beta1)

2009-09-25  Benjamin Mack  <benni@typo3.org>

	* Fixed #8802: Fileadmin: extensions of new files should only show allowed extensions (Thanks to Steffen Gebert)
	* Cleanup #11357: Make use of new t3lib_div::redirect function throughout the core

2009-09-25  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12046: Skinning possibilities are not available with frontend editing
	* Cleanup: Updated NEWS.txt
	* Fixed bug #12064: Warning when edit form is rendered with wizards in backend

2009-09-25  Benjamin Mack  <benni@typo3.org>

	* Added feature #11793: Give CONTENT.table stdWrap properties (thanks to Sebastian Gebhard)

2009-09-24  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12025: Make statuses in the status report sorted and grouped (thanks also to Ingo Renner)
	* Follow-up to bug #12021: Extension Manager is not translatable (part 8) (thanks to Christopher Stelmaszyk)
	* Cleanup #12053: Cleanup of Extension Manager
	* Fixed bug #12021: Extension Manager is not translatable (part 8) (thanks to Christopher Stelmaszyk)
